# sqlite-mcp

./: .gitignore  README.md  pyproject.toml  sqlite_mcp_server.py
