[project]
name = "sqlite-mcp-server"
version = "1.0.0"
description = "A full-featured SQLite MCP (Model Context Protocol) server - query, modify, and manage SQLite databases through AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "sqlite", "model-context-protocol", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sqlite-mcp-server = "sqlite_mcp_server:main"

[tool.uv]
package = true
